--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
             <i class="fa fa-instagram"></i>
             <i class="fa fa-linkedin"></i>
         </div>
-        <p>Made with <i class="fa fa-heart-o"></i> by S.A. Ansari</p>
+        <p>Made with <i class="fa fa-heart-o"></i> by Shah Afnan Ansari</p>
     </section>
 
 
