--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>University Web Design</title>
+    <title>University Web Portal</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/aaab29d6c2.js"></script>
     <!--
@@ -31,7 +31,7 @@
         </nav>
     
     <div class="text-box">
-        <h1>World's Biggest University</h1>
+        <h1>University Admission Portal</h1>
         <p>Making Website is now one of the easiest thing in the world. You
         just need to learn HTML, CSS, <br> Javascript and you are good to go.
         </p>
