--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +14,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,500&display=swap" rel="stylesheet">
     -->
 </head>
-<body>   
+
+<body>
     <section class="sub-header">
         <nav>
             <a href="index.html"><img src="images/logo.png"></a>
@@ -25,6 +27,7 @@
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="login.html">LOGOUT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -38,8 +41,10 @@
         <div class="row">
             <div class="about-col">
                 <h1>We are the world's largest university</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veniam quam debitis repudiandae et vero delectus pariatur corporis. Iste debitis eveniet nulla optio aspernatur recusandae voluptates eaque culpa et quas.</p>
-                <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veniam quam debitis repudiandae et
+                    vero delectus pariatur corporis. Iste debitis eveniet nulla optio aspernatur recusandae voluptates
+                    eaque culpa et quas.</p>
+                <a href="course.html" class="hero-btn red-btn">EXPLORE NOW</a>
             </div>
             <div class="about-col">
                 <img src="images/about.jpg">
@@ -51,12 +56,14 @@
 
     <section class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae ipsam culpa placeat reiciendis ad aliquam facere hic. <br> Error doloremque sunt cupiditate animi possimus eveniet doloribus. Nihil vel alias iure necessitatibus!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae ipsam culpa placeat reiciendis ad aliquam
+            facere hic. <br> Error doloremque sunt cupiditate animi possimus eveniet doloribus. Nihil vel alias iure
+            necessitatibus!</p>
         <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedin"></i>
+            <a href="https://www.facebook.com/shahafnan.ansari" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://github.com/Afnan215" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="https://www.instagram.com/ansari_afnan_" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/shah-afnan-ansari" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
         <p>Made with <i class="fa fa-heart-o"></i> by S.A. Ansari</p>
     </section>
@@ -67,14 +74,15 @@
     <script>
 
         var navLinks = document.getElementById("navLinks");
-        function showMenu(){
+        function showMenu() {
             navLinks.style.right = "0";
         }
-        function hideMenu(){
+        function hideMenu() {
             navLinks.style.right = "-200px";
         }
 
     </script>
-    
+
 </body>
+
 </html>
