--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +14,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,500&display=swap" rel="stylesheet">
     -->
 </head>
-<body>   
+
+<body>
     <section class="sub-header">
         <nav>
             <a href="index.html"><img src="images/logo.png"></a>
@@ -25,6 +27,7 @@
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="login.html">LOGOUT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -39,23 +42,40 @@
             <div class="blog-left">
                 <img src="images/certificate.jpg">
                 <h2>Our Certificate & Online Programs For 2021</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius tenetur consequatur sequi sint excepturi magnam ipsum aut consectetur! Velit ad culpa architecto. Mollitia ipsum eaque laborum tempora sequi ducimus illo?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius tenetur consequatur sequi sint
+                    excepturi magnam ipsum aut consectetur! Velit ad culpa architecto. Mollitia ipsum eaque laborum
+                    tempora sequi ducimus illo?</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda reprehenderit magni beatae eveniet quo necessitatibus quam numquam omnis esse ipsa! Sed doloribus quaerat voluptatum facilis doloremque qui dolorem ab numquam!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda reprehenderit magni beatae eveniet
+                    quo necessitatibus quam numquam omnis esse ipsa! Sed doloribus quaerat voluptatum facilis doloremque
+                    qui dolorem ab numquam!</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde magnam tempora corrupti, nesciunt animi, quia non minima vitae excepturi repellat veritatis fuga consectetur, ad beatae adipisci doloremque praesentium sit at officia! Mollitia quidem inventore, quam neque magni exercitationem optio omnis quas, perspiciatis, doloribus voluptatum ipsam quis voluptas et voluptatem maiores est harum? Voluptatum nulla accusamus consequuntur. Ea repellendus doloremque placeat.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde magnam tempora corrupti, nesciunt
+                    animi, quia non minima vitae excepturi repellat veritatis fuga consectetur, ad beatae adipisci
+                    doloremque praesentium sit at officia! Mollitia quidem inventore, quam neque magni exercitationem
+                    optio omnis quas, perspiciatis, doloribus voluptatum ipsam quis voluptas et voluptatem maiores est
+                    harum? Voluptatum nulla accusamus consequuntur. Ea repellendus doloremque placeat.</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quidem mollitia numquam expedita veritatis illo perspiciatis sequi iure illum odio ad ab qui quos placeat magni repudiandae ipsum fugiat quasi eius ducimus, aliquam laboriosam non! Nulla fuga nihil distinctio doloremque consequatur dicta ipsam, a nemo in commodi et omnis, repudiandae aperiam eveniet porro deleniti veritatis labore adipisci quos. Eius, iure id veniam eum dolorum doloribus suscipit. Et saepe soluta officiis veritatis vero laboriosam omnis in eum illum voluptates at quo corrupti sint, ipsam expedita dolores ipsa nihil voluptatibus, sit suscipit natus officia mollitia dolore harum? Ipsa, exercitationem vel. Incidunt, non.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quidem mollitia numquam expedita
+                    veritatis illo perspiciatis sequi iure illum odio ad ab qui quos placeat magni repudiandae ipsum
+                    fugiat quasi eius ducimus, aliquam laboriosam non! Nulla fuga nihil distinctio doloremque
+                    consequatur dicta ipsam, a nemo in commodi et omnis, repudiandae aperiam eveniet porro deleniti
+                    veritatis labore adipisci quos. Eius, iure id veniam eum dolorum doloribus suscipit. Et saepe soluta
+                    officiis veritatis vero laboriosam omnis in eum illum voluptates at quo corrupti sint, ipsam
+                    expedita dolores ipsa nihil voluptatibus, sit suscipit natus officia mollitia dolore harum? Ipsa,
+                    exercitationem vel. Incidunt, non.</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore repellat doloribus ut debitis assumenda maxime. Facilis cumque animi nesciunt odio assumenda voluptatem atque error, enim officia dolore velit vel.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore repellat doloribus ut debitis
+                    assumenda maxime. Facilis cumque animi nesciunt odio assumenda voluptatem atque error, enim officia
+                    dolore velit vel.</p>
 
                 <div class="comment-box">
                     <h3>Leave a comment</h3>
-                    <form class="comment-form">
-                        <input type="text" placeholder="Enter Name">
-                        <input type="email" placeholder="Enter Email">
-                        <textarea rows="5" placeholder="Your comment"></textarea>
-                        <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+                    <form class="comment-form" method="post">
+                        <input type="text" placeholder="Enter Name" id="name" required>
+                        <input type="email" placeholder="Enter Email" id="email" required>
+                        <textarea rows="5" placeholder="Your comment" id="comment" required></textarea>
+                        <button type="submit" class="comment-btn hero-btn red-btn">POST COMMENT</button>
                     </form>
                 </div>
 
@@ -102,12 +122,14 @@
 
     <section class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae ipsam culpa placeat reiciendis ad aliquam facere hic. <br> Error doloremque sunt cupiditate animi possimus eveniet doloribus. Nihil vel alias iure necessitatibus!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae ipsam culpa placeat reiciendis ad aliquam
+            facere hic. <br> Error doloremque sunt cupiditate animi possimus eveniet doloribus. Nihil vel alias iure
+            necessitatibus!</p>
         <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedin"></i>
+            <a href="https://www.facebook.com/shahafnan.ansari" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://github.com/Afnan215" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="https://www.instagram.com/ansari_afnan_" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/shah-afnan-ansari" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
         <p>Made with <i class="fa fa-heart-o"></i> by S.A. Ansari</p>
     </section>
@@ -115,17 +137,19 @@
 
     <!-------- JavaScript for toggle --------->
 
-    <script>
 
+    <script src="./js/blog.js"></script>
+    <script>
         var navLinks = document.getElementById("navLinks");
-        function showMenu(){
+        function showMenu() {
             navLinks.style.right = "0";
         }
-        function hideMenu(){
+        function hideMenu() {
             navLinks.style.right = "-200px";
         }
 
     </script>
-    
+
 </body>
+
 </html>
