--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University Web Design</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./popup.css">
     <script src="https://use.fontawesome.com/aaab29d6c2.js"></script>
     <!--
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +28,7 @@
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="login.html">LOGOUT</a></li>
+                    <li><a href="#" id="logout">LOGOUT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -118,6 +119,10 @@
         </div>
     </section>
 
+    <div class="message-popup" style="background-color:#f44336">
+        <p id="response-mssg" style="color: #fff;"></p>
+    </div>
+
     <!------- Footer ------->
 
     <section class="footer">
@@ -138,8 +143,21 @@
     <!-------- JavaScript for toggle --------->
 
 
-    <script src="./js/blog.js"></script>
     <script>
+        const logoutBtn = document.querySelector('#logout');
+        // (function () {
+        //     if (localStorage.getItem('email') && localStorage.getItem('loggedIn')) {
+        //         window.location = './blog.html';
+        //     } else {
+        //         localStorage.setItem('loggedIn', false);
+        //         window.location = './login.html'
+        //     }
+        // })()
+        logoutBtn.addEventListener('click', () => {
+            localStorage.removeItem('email')
+            localStorage.removeItem('loggedIn')
+            window.location = './login.html'
+        })
         var navLinks = document.getElementById("navLinks");
         function showMenu() {
             navLinks.style.right = "0";
@@ -147,8 +165,8 @@
         function hideMenu() {
             navLinks.style.right = "-200px";
         }
-
     </script>
+    <script src="./js/blog.js"></script>
 
 </body>
 
