--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <title>University Web Portal</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/aaab29d6c2.js"></script>
-    <!--
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,500&display=swap" rel="stylesheet">
-    -->
 </head>
 
 <body>
@@ -27,7 +22,7 @@
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="login.html">LOGOUT</a></li>
+                    <li><a href="login.html">LOGIN</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -203,7 +198,7 @@
             <a href="https://www.instagram.com/ansari_afnan_" target="_blank"><i class="fa fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/shah-afnan-ansari" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
-        <p>Made with <i class="fa fa-heart-o"></i> by S.A. Ansari</p>
+        <p>Made with <i class="fa fa-heart-o"></i> by Shah Afnan Ansari</p>
     </section>
 
 
