--- a/blog.html
+++ b/blog.html
@@ -8,11 +8,6 @@
     <title>University Web Design</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/aaab29d6c2.js"></script>
-    <!--
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,500&display=swap" rel="stylesheet">
-    -->
 </head>
 
 <body>
@@ -32,7 +27,7 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Our Certificate & Online Programs For 2021</h1>
+        <h1>Our Certificate & Online Programs For 2022</h1>
     </section>
 
     <!------ blog page content -------->
@@ -131,7 +126,7 @@
             <a href="https://www.instagram.com/ansari_afnan_" target="_blank"><i class="fa fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/shah-afnan-ansari" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
-        <p>Made with <i class="fa fa-heart-o"></i> by S.A. Ansari</p>
+        <p>Made with <i class="fa fa-heart-o"></i> Shah Afnan Ansari</p>
     </section>
 
 
