--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,6 @@
     <title>University Web Design</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/aaab29d6c2.js"></script>
-    <!--
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,500&display=swap" rel="stylesheet">
-    -->
 </head>
 
 <body>
@@ -65,7 +60,7 @@
                 <div>
                     <i class="fa fa-envelope-o"></i>
                     <span>
-                        <h5>shahafnan786@gmail.com</h5>
+                        <h5>universityadmissionportal33@gmail.com</h5>
                         <p>Email us your query</p>
                     </span>
                 </div>
